views: Make the radio or check in MenuItemView clickable.

Make the menu item handle click events on its icon view.
(support clicking on a radio/check icon in a menu item)

Bug: 768449
Test: See bug.
Change-Id: I1da3ce9baad36b1e35278e3a7c466e96c4e00876
Reviewed-on: https://chromium-review.googlesource.com/691175
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Michael Wasserman <msw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#505402}
Former-commit-id: 09c2eddf96046d0719aab2098ace8ec4b5d4f042